NULL = 

SUBDIRS = reference

man_MANS = \
	caja.1 \
	caja-autorun-software.1 \
	caja-connect-server.1 \
	caja-file-management-properties.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	caja-internals.sxw \
	caja-internals.pdf \
	caja-io.txt \
	caja.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)

-include $(top_srcdir)/git.mk
